--- a/src/pug/blocks/dating-search-form.pug
+++ b/src/pug/blocks/dating-search-form.pug
@@ -13,7 +13,7 @@ div(class="block-dating-search-form")
 				div(class="search-form-location")
 					div(class="form-title") Местонахождение
 					div(class="select-wrp")
-						select(id="category-select" class="location-select" name="location-select")
+						select(id="category-select1" class="location-select" name="location-select")
 							option(value="" disabled selected style='display:none;') Любое
 							option(value="option1") Значение 1
 							option(value="option1") Значение 3
@@ -33,7 +33,7 @@ div(class="block-dating-search-form")
 				div(class="search-form-goal")
 					div(class="form-title") Цель
 					div(class="select-wrp")
-						select(id="category-select" class="goal-select" name="goal-select")
+						select(id="category-select2" class="goal-select" name="goal-select")
 							option(value="" disabled selected style='display:none;') Все цели
 							option(value="option1") Значение 1
 							option(value="option1") Значение 3
