--- a/src/css/blocks/datingEdit.css
+++ b/src/css/blocks/datingEdit.css
@@ -77,6 +77,8 @@
 	resize: none;
 	width: 100%;
 	height: 164px;
+	border-radius: 4px;
+	border: 1px solid #c4c4c4;
 }
 
 .datingEdit-form .upload-photo {
