--- a/src/css/blocks/datingMessages.css
+++ b/src/css/blocks/datingMessages.css
@@ -85,7 +85,8 @@
 	font-size: 13px;
 	width: 100%;
 	height: 128px;
-	border-radius: 4px
+	border-radius: 4px;
+	border: 1px solid #c4c4c4;
 }
 
 .block-datingMessages .save-changes{
