--- a/src/pug/pages/aboutHainanFoto.pug
+++ b/src/pug/pages/aboutHainanFoto.pug
@@ -35,7 +35,7 @@ block content
 									img(src="images/gal-mini.jpg" alt="Фото" width="90" height="89")
 								div(class="itm")
 									img(src="images/gal-mini.jpg" alt="Фото" width="90" height="89")
-								div(class="itm all" href="#")
+								div(class="itm all")
 									span 6 
 									| фото
 
