--- a/src/pug/pages/datingEdit.pug
+++ b/src/pug/pages/datingEdit.pug
@@ -28,7 +28,7 @@ block content
 						div(class="form-el-wrp")
 							input(type="text" name="e-mail" placeholder="E-mail:")
 						div(class="form-el-wrp")
-							input(class="bday" type="datetime" name="bday"	placeholder="Дата рождения:")
+							input(class="bday" type="text" name="bday"	placeholder="Дата рождения:")
 						div(class="select-wrp")
 							select(class="sex-select" name="sex")
 								option(value="" disabled selected style='display:none;') Пол:
@@ -40,49 +40,49 @@ block content
 							textarea(name="about" placeholder="О себе")
 
 						div(class="select-wrp")
-							select(id="category-select" class="category-select" name="goal-select")
+							select(class="category-select" name="goal-select")
 								option(value="" disabled selected style='display:none;') Цель знакомства:
 								option(value="option1") Значение 1
 								option(value="option1") Значение 3
 
 						div(class="select-wrp")
-							select(id="category-select" class="category-select" name="location-select")
+							select(class="category-select" name="location-select")
 								option(value="" disabled selected style='display:none;') Местоположение:
 								option(value="option1") Значение 1
 								option(value="option1") Значение 3
 
 						div(class="select-wrp")
-							select(id="category-select" class="category-select" name="finance-select")
+							select(class="category-select" name="finance-select")
 								option(value="" disabled selected style='display:none;') Материальное положение:
 								option(value="option1") Значение 1
 								option(value="option1") Значение 3
 
 						div(class="select-wrp")
-							select(id="category-select" class="category-select" name="education-select")
+							select(class="category-select" name="education-select")
 								option(value="" disabled selected style='display:none;') Образование:
 								option(value="option1") Значение 1
 								option(value="option1") Значение 3
 
 						div(class="select-wrp")
-							select(id="category-select" class="category-select" name="zodiac-select")
+							select(class="category-select" name="zodiac-select")
 								option(value="" disabled selected style='display:none;') Знак зодиака:
 								option(value="option1") Значение 1
 								option(value="option1") Значение 3
 
 						div(class="select-wrp")
-							select(id="category-select" class="category-select" name="eyecolor-select")
+							select(class="category-select" name="eyecolor-select")
 								option(value="" disabled selected style='display:none;') Цвет глаз:
 								option(value="option1") Значение 1
 								option(value="option1") Значение 3
 
 						div(class="select-wrp")
-							select(id="category-select" class="category-select" name="haircolor-select")
+							select(class="category-select" name="haircolor-select")
 								option(value="" disabled selected style='display:none;') Цвет волос:
 								option(value="option1") Значение 1
 								option(value="option1") Значение 3
 
 						div(class="select-wrp")
-							select(id="category-select" class="category-select" name="language-select")
+							select(class="category-select" name="language-select")
 								option(value="" disabled selected style='display:none;') Язык общения:
 								option(value="option1") Значение 1
 								option(value="option1") Значение 3
