--- a/src/pug/pages/profile.pug
+++ b/src/pug/pages/profile.pug
@@ -93,7 +93,7 @@ block content
 										img(src="images/gal-mini.jpg" alt="Фото" width="90" height="89")
 									div(class="itm")
 										img(src="images/gal-mini.jpg" alt="Фото" width="90" height="89")
-									div(class="itm all" href="#")
+									div(class="itm all")
 										span 6 
 										| фото
 
