--- a/src/pug/pages/aboutHainanFotoFull.pug
+++ b/src/pug/pages/aboutHainanFotoFull.pug
@@ -37,6 +37,9 @@ block content
 						div(class="gallery-item")
 							img(src="images/gal6.jpg" alt="Фото" width="290" height="215")
 
+					div(class="aboutHainanFotoFull-back-btn")
+						a(class="back-btn" href="#") #[span Возврат к списку]
+
 
 			include ../blocks/events
 			include ../blocks/comments
