--- a/src/pug/pages/contestTsigunWoman.pug
+++ b/src/pug/pages/contestTsigunWoman.pug
@@ -62,6 +62,8 @@ block content
 						div(class="nav-button")
 							a(class="next-btn btn" href="#") #[span Следующая учатница]
 						div(class="nav-button")
+							a(class="prev-btn btn" href="#") #[span Предыдущая учатница]
+						div(class="nav-button")
 							a(class="back-btn btn" href="#") #[span Назад к списку участниц]
 
 				div(class="contestTsigunWoman-comments")
