--- a/src/pug/pages/dating.pug
+++ b/src/pug/pages/dating.pug
@@ -63,6 +63,53 @@ block content
 								div(class="verified-flag")
 								div(class="premium-flag")
 
+				div(class="dating-new-questionnaires")
+					h3(class="new-questionnaires-title title")
+						span Новые 
+						| лица
+					div(class="new-users")
+						a(class="new-user" href="#")
+							div(class="photo")
+								img(src="images/dating-man.jpg" alt="Фотография" width="290" height="362")
+							div(class="status") Ищу друзей для переписки
+							div(class="info")
+								div(class="online") Не в сети
+								div(class="name") Макс Дойч 
+								div(class="location") Хайнань
+								div(class="verified-flag")
+								div(class="premium-flag")
+						a(class="new-user" href="#")
+							div(class="photo")
+								img(src="images/dating-woman.jpg" alt="Фотография" width="290" height="362")
+							div(class="status") Ищу друзей для переписки
+							div(class="info")
+								div(class="online") Не в сети
+								div(class="name") Анастасия Смирнова
+								div(class="location") Хайнань
+								div(class="verified-flag")
+								div(class="premium-flag")
+						a(class="new-user" href="#")
+							div(class="photo")
+								img(src="images/dating-man.jpg" alt="Фотография" width="290" height="362")
+							div(class="status") Ищу друзей для переписки
+							div(class="info")
+								div(class="online") Не в сети
+								div(class="name") Макс Дойч 
+								div(class="location") Хайнань
+								div(class="verified-flag")
+								div(class="premium-flag")
+						a(class="new-user" href="#")
+							div(class="photo")
+								img(src="images/dating-woman.jpg" alt="Фотография" width="290" height="362")
+							div(class="status") Ищу друзей для переписки
+							div(class="info")
+								div(class="online") Не в сети
+								div(class="name") Анастасия Смирнова
+								div(class="location") Хайнань
+								div(class="verified-flag")
+								div(class="premium-flag")
+
+
 			include ../blocks/events
 			include ../blocks/comments
 			include ../blocks/ad
