--- a/src/css/blocks/addPost.css
+++ b/src/css/blocks/addPost.css
@@ -15,6 +15,36 @@
 	border-radius: 2px;
 }
 
+.block-addPost select	{
+	width: 100%;
+	padding: 5px 0px;
+	padding-right: 32px;
+	padding-left: 13px;
+	border: 1px solid #c4c4c4;
+	color: #000;
+	background-color: #fff;
+	cursor: pointer;
+	-webkit-appearance:none;
+	-moz-appearance:none;
+	appearance:none;
+	background: #fff url("../../images/select-dw-icon.png") right 11px top 50% / 10px no-repeat
+}
+
+.block-addPost .select-wrp {
+	position: relative;
+}
+
+.block-addPost .select-wrp::after {
+	position: absolute;
+	content: '';
+	width: 1px;
+	height: 30px;
+	top: 0;
+	right: 32px;
+	background-color: #c4c4c4;
+	cursor: pointer;
+}
+
 .addPost-title {
 	margin-bottom: 21px;
 }
