--- a/src/css/blocks/dating.css
+++ b/src/css/blocks/dating.css
@@ -26,7 +26,7 @@
 }
 
 .dating-premium-questionnaires {
-	padding-bottom: 57px;
+	padding-bottom: 35px;
 }
 
 .dating-premium-questionnaires .premium-user {
@@ -110,6 +110,107 @@
 }
 
 .dating-premium-questionnaires .premium-flag {
+	width: 21px;
+	height: 30px;
+	top: -9px;
+	right: 14px;
+	background: url("../../images/sprite.png") -36px -5px no-repeat;
+}
+
+.new-questionnaires-title {
+	color: #828080;
+	margin-bottom: 13px;
+}
+
+.new-questionnaires-title span {
+	color: #26c6da;
+}
+
+.dating-new-questionnaires {
+	padding-bottom: 57px;
+}
+
+.dating-new-questionnaires .new-user {
+	display: block;
+	position: relative;
+	margin-bottom: 12px;
+	border-radius: 6px;
+	overflow: hidden;
+}
+
+.dating-new-questionnaires .status {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	padding: 9px 13px;
+	background-color: rgba(0,0,0, .5);
+	font-size: 13px;
+	color: #fff;
+}
+
+.dating-new-questionnaires .info {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	padding-top: 13px;
+	padding-left: 13px;
+	background-color: rgba(0,0,0, .5);
+}
+
+.dating-new-questionnaires .online {
+	padding-left: 9px;
+	font-size: 13px;
+	color: #fff;
+}
+
+.dating-new-questionnaires .name {
+	padding-top: 4px;
+	font-size: 18px;
+	font-weight: 600;
+	color: #fff;
+}
+
+.dating-new-questionnaires .location {
+	position: relative;
+	padding-bottom: 35px;
+	padding-top: 8px;
+	padding-left: 18px;
+	font-size: 13px;
+	color: #fff;
+	font-style: italic;
+}
+
+.dating-new-questionnaires .location::after {
+	position: absolute;
+	content: '';
+	width: 10px;
+	height: 13px;
+	top: 10px;
+	left: 0;
+	background: url("../../images/sprite.png") -1204px -5px no-repeat;
+}
+
+.dating-new-questionnaires .photo img {
+	width: 100%;
+	max-width: 100%;
+	height: auto;
+}
+
+.dating-new-questionnaires .verified-flag, .dating-new-questionnaires .premium-flag {
+	position: absolute;
+}
+
+.dating-new-questionnaires .verified-flag {
+	width: 21px;
+	height: 30px;
+	top: -9px;
+	right: 41px;
+	background: url("../../images/sprite.png") -5px -5px no-repeat;
+}
+
+.dating-new-questionnaires .premium-flag {
 	width: 21px;
 	height: 30px;
 	top: -9px;
