--- a/src/css/blocks/events.css
+++ b/src/css/blocks/events.css
@@ -114,8 +114,22 @@
 	color: #a4a094;
 }
 
-.block-events .previews-show-all a{
+.block-events .previews-show-all {
+	padding-top: 38px;
 	margin-right: -15px;
+	text-align: right;
+}
+
+.block-events .previews-show-all a{
+	display: inline-block;
+	vertical-align: top;
+	font-size: 13px;
+	line-height: 20px;
+	font-weight: normal;
+	color: #fff;
+	background-color: #26c6da;
+	padding: 7px 18px;
+	text-align: center;
 }
 
 
