--- a/src/pug/pages/contributorList.pug
+++ b/src/pug/pages/contributorList.pug
@@ -58,7 +58,7 @@ block content
 									div(class="item")
 										img(src="images/rating-icon3.png" alt="Рейтинг" width="13" height="13")
 							div(class="ratings-month")
-								div(class="ratings-title title") Рейтинг
+								div(class="ratings-title title") За месяц
 								div(class="ratings-num") 0
 								div(class="ratings-items")
 									div(class="item")
@@ -104,7 +104,7 @@ block content
 									div(class="item")
 										img(src="images/rating-icon4.png" alt="Рейтинг" width="13" height="13")
 							div(class="ratings-month")
-								div(class="ratings-title title") Рейтинг
+								div(class="ratings-title title") За месяц
 								div(class="ratings-num") 0
 								div(class="ratings-items")
 									div(class="item")
@@ -141,7 +141,7 @@ block content
 									div(class="item")
 										img(src="images/rating-icon4.png" alt="Рейтинг" width="13" height="13")
 							div(class="ratings-month")
-								div(class="ratings-title title") Рейтинг
+								div(class="ratings-title title") За месяц
 								div(class="ratings-num") 0
 								div(class="ratings-items")
 									div(class="item")
@@ -178,7 +178,7 @@ block content
 									div(class="item")
 										img(src="images/rating-icon4.png" alt="Рейтинг" width="13" height="13")
 							div(class="ratings-month")
-								div(class="ratings-title title") Рейтинг
+								div(class="ratings-title title") За месяц
 								div(class="ratings-num") 0
 								div(class="ratings-items")
 									div(class="item")
@@ -215,7 +215,7 @@ block content
 									div(class="item")
 										img(src="images/rating-icon4.png" alt="Рейтинг" width="13" height="13")
 							div(class="ratings-month")
-								div(class="ratings-title title") Рейтинг
+								div(class="ratings-title title") За месяц
 								div(class="ratings-num") 0
 								div(class="ratings-items")
 									div(class="item")
@@ -252,7 +252,7 @@ block content
 									div(class="item")
 										img(src="images/rating-icon4.png" alt="Рейтинг" width="13" height="13")
 							div(class="ratings-month")
-								div(class="ratings-title title") Рейтинг
+								div(class="ratings-title title") За месяц
 								div(class="ratings-num") 0
 								div(class="ratings-items")
 									div(class="item")
@@ -289,7 +289,7 @@ block content
 									div(class="item")
 										img(src="images/rating-icon4.png" alt="Рейтинг" width="13" height="13")
 							div(class="ratings-month")
-								div(class="ratings-title title") Рейтинг
+								div(class="ratings-title title") За месяц
 								div(class="ratings-num") 0
 								div(class="ratings-items")
 									div(class="item")
@@ -326,7 +326,7 @@ block content
 									div(class="item")
 										img(src="images/rating-icon4.png" alt="Рейтинг" width="13" height="13")
 							div(class="ratings-month")
-								div(class="ratings-title title") Рейтинг
+								div(class="ratings-title title") За месяц
 								div(class="ratings-num") 0
 								div(class="ratings-items")
 									div(class="item")
@@ -363,7 +363,7 @@ block content
 									div(class="item")
 										img(src="images/rating-icon4.png" alt="Рейтинг" width="13" height="13")
 							div(class="ratings-month")
-								div(class="ratings-title title") Рейтинг
+								div(class="ratings-title title") За месяц
 								div(class="ratings-num") 0
 								div(class="ratings-items")
 									div(class="item")
@@ -400,7 +400,7 @@ block content
 									div(class="item")
 										img(src="images/rating-icon4.png" alt="Рейтинг" width="13" height="13")
 							div(class="ratings-month")
-								div(class="ratings-title title") Рейтинг
+								div(class="ratings-title title") За месяц
 								div(class="ratings-num") 0
 								div(class="ratings-items")
 									div(class="item")
@@ -437,7 +437,7 @@ block content
 									div(class="item")
 										img(src="images/rating-icon4.png" alt="Рейтинг" width="13" height="13")
 							div(class="ratings-month")
-								div(class="ratings-title title") Рейтинг
+								div(class="ratings-title title") За месяц
 								div(class="ratings-num") 0
 								div(class="ratings-items")
 									div(class="item")
