--- a/src/pug/blocks/dating-search-form.pug
+++ b/src/pug/blocks/dating-search-form.pug
@@ -141,4 +141,4 @@ div(class="block-dating-search-form")
 
 				button(class="search-btn" type="submit" name="search-btn") Найти
 
-				a(class="ex-search" href="#") Расширенный поиск
+				a(class="ex-search" href="#") Быстрый поиск
