--- a/src/pug/pages/aboutHainanFotoFull.pug
+++ b/src/pug/pages/aboutHainanFotoFull.pug
@@ -24,17 +24,17 @@ block content
 							div(class="autor-foto")
 					div(class="aboutHainanFotoFull-description") Неповторимая Anna Tyab специально для Hainanlife.
 					div(class="aboutHainanFotoFull-gallery")
-						div(class="gallery-item")
+						a(class="gallery-item" href="images/gal1.jpg")
 							img(src="images/gal1.jpg" alt="Фото" width="290" height="215")
-						div(class="gallery-item")
+						a(class="gallery-item" href="images/gal2.jpg")
 							img(src="images/gal2.jpg" alt="Фото" width="290" height="215")
-						div(class="gallery-item")
+						a(class="gallery-item" href="images/gal3.jpg")
 							img(src="images/gal3.jpg" alt="Фото" width="290" height="215")
-						div(class="gallery-item")
+						a(class="gallery-item" href="images/gal4.jpg")
 							img(src="images/gal4.jpg" alt="Фото" width="290" height="215")
-						div(class="gallery-item")
+						a(class="gallery-item" href="images/gal5.jpg")
 							img(src="images/gal5.jpg" alt="Фото" width="290" height="215")
-						div(class="gallery-item")
+						a(class="gallery-item" href="images/gal6.jpg")
 							img(src="images/gal6.jpg" alt="Фото" width="290" height="215")
 
 					div(class="aboutHainanFotoFull-back-btn")
