--- a/src/pug/pages/contestTsigun.pug
+++ b/src/pug/pages/contestTsigun.pug
@@ -92,7 +92,7 @@ block content
 									div(class="scale-num") 0,14%
 
 					div(class="show-all")
-						div(class="show-all-btn") Все участницы
+						a(class="show-all-btn" href="#") Все участницы
 
 
 				div(class="contestTsigun-items men")
