--- a/src/pug/layout/layout.pug
+++ b/src/pug/layout/layout.pug
@@ -13,6 +13,7 @@ html(class='no-js' lang='ru')
 		link(rel='stylesheet' href='css/fonts.css')
 		link(rel='stylesheet' href='css/fonts.css')
 		link(rel='stylesheet' href='css/jquery-ui/jquery-ui.min.css')
+		link(rel='stylesheet' href='js/vendor/fancybox/jquery.fancybox.css')
 		link(rel='stylesheet' href='css/slick.js/slick.css')
 		link(rel='stylesheet' href='css/slick.js/slick-theme.css')
 		link(rel='stylesheet' href='css/css3.css')
@@ -22,6 +23,7 @@ html(class='no-js' lang='ru')
 		script(src='js/vendor/jquery-3.2.0.min.js')
 		script(src='js/vendor/jquery-migrate-1.4.1.min.js')
 		script(src='js/vendor/jquery.form.min.js')
+		script(src='js/vendor/fancybox/jquery.fancybox.pack.js')
 		script(src='js/vendor/jquery-ui/jquery-ui.min.js')
 		script(src='js/vendor/jquery-ui/jquery.ui.datepicker-ru.js')
 		script(src='js/vendor/fancybox/jquery.fancybox.pack.js')
